fix-align trick just in rtl

--- a/assets/styles/02-generic/common.scss
+++ b/assets/styles/02-generic/common.scss
@@ -7,11 +7,6 @@ html {
   pointer-events: none;
 }
 
-.fix-align {
-  transform: translateY(-2px);
-  display: inline-block;
-}
-
 .flip-x{
   transform: scaleX(-1);
 }
