--- a/assets/styles/02-generic/rtl.scss
+++ b/assets/styles/02-generic/rtl.scss
@@ -12,4 +12,9 @@
     background-position: left 0.5rem center;
     padding-right: 12px;
   }
+
+  .fix-align {
+    transform: translateY(-2px);
+    display: inline-block;
+  }
 }
